Changed nav logo link to relative.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="CSSGrid">
         <div class="navLogo" id="Home">
             <div id="navLogoPadd">
-            <img src="https://swtcc-my.sharepoint.com/:u:/r/personal/fthompson2_southwest_tn_edu/Documents/webdevelopement/thompsonelements/logoBanner.png" style="height:120px" alt="Thompson Elements Logo">
+            <img src="logoBanner.png" style="height:120px" alt="Thompson Elements Logo">
             </div>
         </div>
         <div class="navText">
