--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="Content">
             <div id=headerImagePadd>
-                <img src="https://swtcc-my.sharepoint.com/:u:/r/personal/fthompson2_southwest_tn_edu/Documents/webdevelopement/thompsonelements/FredT.svg"
+                <img src="FredT.svg"
                 alt="Headshot of Frederick Thompson"
                 style="width:auto;height:500px">
             </div>
