--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,15 +10,15 @@
 </head>
 <body>
     <div class="CSSGrid">
-        <div class="navLogo" id="Home">
-            <div id="navLogoPadd">
+        <div class="navlogo" id="home">
+            <div id="navlogopadd">
             <img src="logoBanner.png" style="height:120px" alt="Thompson Elements Logo">
             </div>
         </div>
-        <div class="navText">
-            <nav id=navTextPadd>
-                <a href="#Home">Home</a>
-                <a href="#abMe">About</a>
+        <div class="navtext">
+            <nav id=navtextpadd>
+                <a href="#home">Home</a>
+                <a href="#abme">About</a>
                 <a href="#">Contact</a>
                 <a href="https://github.com/FredLeeThompson" style="margin-left:27px;padding-top:20px" target="_blank">
                     <img src="github.png"
@@ -29,36 +30,36 @@
         </div>
 
 
-        <div class="headerContentText">
-            <div class="Header box round">
-                <div id="headerContentTextPadd">
+        <div class="headercontenttext">
+            <div class="header box round">
+                <div id="headercontenttextpadd">
                     <h2>Innovative, Discoverative, Intuitive.</h2>
                 </div>
                 <br />
                 <br />
-                <div id="myButtonPadd">
-                    <a href="#" class="myButton" style="color:black">View Case Studies</a>
+                <div id="mybuttonpadd">
+                    <a href="#" class="mybutton" style="color:black">View Case Studies</a>
                 </div>
             </div>
         </div>
 
 
-        <div class="Content">
-            <div id=headerImagePadd>
+        <div class="content">
+            <div id=headerimagepadd>
                 <img src="FredT.svg"
                 alt="Headshot of Frederick Thompson"
                 style="width:auto;height:500px">
             </div>
         </div>
 
-        <div class="aboutMeSect" id="abMe">
-            <div id="aboutMeHeadText">
+        <div class="aboutmesect" id="abme">
+            <div class="aboutmeheadtext">
                 <h3>Purpose Driven Passion</h3>
             </div>
-            <div class="animateLineHolder">
-            <div class="animateLine"></div>
+            <div class="animatelineholder">
+            <div class="animateline"></div>
             </div>
-            <div id="aboutMePadd">
+            <div id="aboutmepadd">
                 <p style="text-align:center">Born and raised in a proverty stricken environment in Memphis Tennessee,
                 I had an early experience of what the impact of limited technology had on not only quality education but
                 also how crippling it can be for any organization in efforts of producing quality and long-standing
@@ -70,33 +71,33 @@
         </div>
 
 
-        <div class="aboutMeSectBar">
-            <div id="aboutMeSectTextPadd">
+        <div class="aboutmesectbar">
+            <div id="aboutmeSecttextpadd">
                 <div>
                     <h3>Recent Projects</h3>
                 </div>
             </div>
         </div>
 
-        <div class="casePreview1" id="greyBackground">
-            <div id="buzzbuzzLogo">
-                <img src="https://swtcc-my.sharepoint.com/:u:/r/personal/fthompson2_southwest_tn_edu/Documents/webdevelopement/thompsonelements/buzzbuzzLogo.png" alt="BuzzBuzz Website preview image">
+        <div class="casepreview1" id="greybackground">
+            <div id="buzzbuzzlogo">
+                <img src="buzzbuzzLogo.png" alt="BuzzBuzz Website preview image">
             </div>
-            <div id="buzzbuzzLogoText">
+            <div id="buzzbuzzlogotext">
                 <p>
                     Too much time on your hands? In need of some random humor
                     or some random knowledge? View my collaboration with
                     <em>BuzzBuzz Inc.</em> and leave with a new name!
                 </p>
             </div>
-            <div style="margin-top:81px;margin-left:280px;" id="casePreviewButtonHolder">
-            <div class="casePreviewButton">View Case Study</div>
+            <div style="margin-top:81px;margin-left:280px;" id="casepreviewbuttonholder">
+            <div class="casepreviewbutton">View Case Study</div>
             </div>
         </div>
 
-        <div class="casePreview1Pic" id="greyBackground">
-            <div id="previewPic1">
-                <img src="https://swtcc-my.sharepoint.com/:u:/r/personal/fthompson2_southwest_tn_edu/Documents/webdevelopement/thompsonelements/casePreview1Pic.png">
+        <div class="casepreview1pic" id="greybackground">
+            <div id="previewpic1">
+                <img src="casePreview1Pic.png">
             </div>
         </div>
 
