Added final grid and body elements.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thompson Elements - Web App Design Company</title>
+    <script src="https://kit.fontawesome.com/14231c02e3.js" crossorigin="anonymous"></script>
     <link href="reset.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arimo&family=IBM+Plex+Sans&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
@@ -19,12 +20,14 @@
             <nav id=navtextpadd>
                 <a href="#home">Home</a>
                 <a href="#abme">About</a>
-                <a href="#">Contact</a>
-                <a href="https://github.com/FredLeeThompson" style="margin-left:27px;padding-top:20px" target="_blank">
-                    <img src="github.png"
+                <a href="#cases"> Cases</a>
+                <a href="#contactMe">Contact</a>
+                <a href="https://github.com/FredLeeThompson" style="margin-left:5px;padding-top:20px" target="_blank">
+                  <i class="fab fa-github fa-5x" style="font-size:2.2rem"></i>
+                    <!-- <img class="gitnav" src="github.png"
                     style="background-color:#4C444C;
                     height:32px;
-                    width:32px">
+                    width:32px"> -->
                 </a>
             </nav>
         </div>
@@ -71,7 +74,7 @@
         </div>
 
 
-        <div class="aboutmesectbar">
+        <div class="aboutmesectbar" id="cases">
             <div id="aboutmeSecttextpadd">
                 <div>
                     <h3>Recent Projects</h3>
@@ -101,7 +104,29 @@
             </div>
         </div>
 
+        <div class="aboutmesectbar contactMe" id="cases">
+            <div id="contactMe">
+                <div>
+                    <h3>Contact Me!</h3>
+                </div>
+            </div>
+        </div>
 
+        <div class="contactMeContent">
+          <div class="mapPadd">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d208833.78596597246!2d-90.08676832759262!3d35.130977150833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d57e1eea439745%3A0xd193f315601ab6fe!2sMemphis%2C%20TN!5e0!3m2!1sen!2sus!4v1599272007031!5m2!1sen!2sus"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          </div>
+        </div>
+        <br><br />
+        <div class="contactText">
+          <a href"#">Find me on LinkedIn</a>
+          <a href"#">Follow me on Github</a>
+        </div>
+        <br>
+        <footer class="footer">
+          <p>copywright &copy;</p>
+        </footer>
     </div>
 </body>
 </html>
