Added unordered list

--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
         </div>
         <br><br />
         <div class="contactText">
-          <a href"#">Find me on LinkedIn</a>
-          <a href"#">Follow me on Github</a>
+          <ul>
+            <a href"#"><p>Find me on LinkedIn</p></a>
+            <a href"#"><p>Follow me on Github</p></a>
+          </ul>
         </div>
         <br>
         <footer class="footer">
