Added list-style-type property to unordered list.

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         </div>
         <br><br />
         <div class="contactText">
-          <ul>
-            <a href"#"><p>Find me on LinkedIn</p></a>
-            <a href"#"><p>Follow me on Github</p></a>
+          <ul style="list-style-type:circle">
+            <li><a href"#"><p>Find me on LinkedIn</p></a></li>
+            <li><a href"#"><p>Follow me on Github</p></a></li>
           </ul>
         </div>
         <br>
