Added list styling and updated href values in 'Contact' section links.

--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
-        <br><br />
+        <br>
         <div class="contactText">
-          <ul style="list-style-type:circle">
-            <li><a href"#"><p>Find me on LinkedIn</p></a></li>
-            <li><a href"#"><p>Follow me on Github</p></a></li>
+          <ul>
+            <li><button><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><p>Find me on LinkedIn</p></a></button></li>
+            <li><button><a href="https://github.com/FredLeeThompson" target="_blank"><p>Follow me on Github</p></a></button></li>
+            <li><button><a href="mailto:thompsonfrederick454@gmail.com" target="_blank"><p>Email Me</p></a></button></li>
           </ul>
         </div>
         <br>
