Updated 'footer' copywright text.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <br>
         <footer class="footer">
-          <p>copywright &copy;</p>
+          <p>&copy; copywright 2020</p>
         </footer>
     </div>
 </body>
