Added button active and visited properties.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         </div>
         <br>
         <div class="contactText">
+          <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
+          <br>
           <ul>
             <li><button><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><p>Find me on LinkedIn</p></a></button></li>
             <li><button><a href="https://github.com/FredLeeThompson" target="_blank"><p>Follow me on Github</p></a></button></li>
