Adjusted copywright text in 'footer' section.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <br>
         <footer class="footer">
-          <p>&copy; copywright 2020</p>
+          <p style="padding-top:10px;">&copy; copywright 2020</p>
         </footer>
     </div>
 </body>
