Corrected line spacing in 'aboutMeSect' and changed list styling to 'disc'.

--- a/index.html
+++ b/index.html
@@ -63,13 +63,7 @@
             <div class="animateline"></div>
             </div>
             <div id="aboutmepadd">
-                <p style="text-align:center">Born and raised in a proverty stricken environment in Memphis Tennessee,
-                I had an early experience of what the impact of limited technology had on not only quality education but
-                also how crippling it can be for any organization in efforts of producing quality and long-standing
-                results to communities far and wide. With a previous background in computer hardware installation and
-                maintenance, I approach all workforce challenges with diligence and self- discipline with high
-                expectations. My goal is to use the fiscal and financial reach of web applications and development to
-                have an ethical impact in businesses and societies throughout.</p>
+                <p style="text-align:center;line-height:1.4">Hello, I'm Frederick Thompson. For as long as I can remember,  I've been working with computer systems. I experienced early on the impact of having limited access to technology had on not only quality education, but also how crippling it can be for any organization in efforts of producing quality and long-standing results to communities far and wide. With a previous background in computer hardware installation and maintenance, I approach all workforce challenges with diligence and self- discipline with high expectations. My goal is to use the fiscal and financial reach of web applications and development to have an ethical impact in businesses and societies throughout.</p>
             </div>
         </div>
 
