Corrected duplicate IDs and added atl text to case preview pic.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
 
-        <div class="casepreview1" id="greybackground">
+        <div class="casepreview1">
             <div id="buzzbuzzlogo">
                 <img src="buzzbuzzLogo.png" alt="BuzzBuzz Website preview image">
             </div>
@@ -92,9 +92,9 @@
             </div>
         </div>
 
-        <div class="casepreview1pic" id="greybackground">
+        <div class="casepreview1pic">
             <div id="previewpic1">
-                <img src="casePreview1Pic.png">
+                <img src="casePreview1Pic.png" alt="BuzzBuzz Case Preview Pic">
             </div>
         </div>
 
