Deleted more duplicate ID's.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
 
-        <div class="aboutmesectbar" id="cases">
+        <div class="aboutmesectbar">
             <div id="aboutmeSecttextpadd">
                 <div>
                     <h3>Recent Projects</h3>
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="aboutmesectbar contactMe" id="cases">
+        <div class="aboutmesectbar contactMe">
             <div id="contactMe">
                 <div>
                     <h3>Contact Me!</h3>
