corrected incorect parent elements setup in 'contact' section.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="contactText">
           <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
           <br>
-          <ul>
+          <ul class="contactButtons">
             <li><button><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><p>Find me on LinkedIn</p></a></button></li>
             <li><button><a href="https://github.com/FredLeeThompson" target="_blank"><p>Follow me on Github</p></a></button></li>
             <li><button><a href="mailto:thompsonfrederick454@gmail.com" target="_blank"><p>Email Me</p></a></button></li>
