--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <div class="contactText">
           <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
           <br>
-          <ul class="contactButtons">
-            <li><button><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><p>Find me on LinkedIn</p></a></button></li>
-            <li><button><a href="https://github.com/FredLeeThompson" target="_blank"><p>Follow me on Github</p></a></button></li>
-            <li><button><a href="mailto:thompsonfrederick454@gmail.com" target="_blank"><p>Email Me</p></a></button></li>
+          <ul>
+            <li><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><button class="contactButtons">Find me on LinkedIn</button></a></li>
+            <li><a href="https://github.com/FredLeeThompson" target="_blank"><button class="contactButtons">Follow me on Github</button></a></li>
+            <li><a href="mailto:thompsonfrederick454@gmail.com" target="_blank"><button class="contactButtons">Email Me</button></a></li>
           </ul>
         </div>
         <br>
