corrected anchor links stylings.

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
           <br>
           <ul>
-            <li><a href="https://www.linkedin.com/m/in/fredleethompson" target="_blank"><button class="contactButtons">Find me on LinkedIn</button></a></li>
-            <li><a href="https://github.com/FredLeeThompson" target="_blank"><button class="contactButtons">Follow me on Github</button></a></li>
-            <li><a href="mailto:thompsonfrederick454@gmail.com" target="_blank"><button class="contactButtons">Email Me</button></a></li>
+            <li><button><a class="contactButtons" href="https://www.linkedin.com/m/in/fredleethompson" target="_blank">Find me on LinkedIn</a></button></li>
+            <li><button><a class="contactButtons" href="https://github.com/FredLeeThompson" target="_blank">Follow me on Github</a></button></li>
+            <li><button><a class="contactButtons" href="mailto:thompsonfrederick454@gmail.com" target="_blank">Email Me</a></button></li>
           </ul>
         </div>
         <br>
