Implimented button attributes to solve element parenting issue.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Thompson Elements - Web App Design Company</title>
     <script src="https://kit.fontawesome.com/14231c02e3.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
     <link href="reset.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arimo&family=IBM+Plex+Sans&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
@@ -117,9 +118,9 @@
           <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
           <br>
           <ul>
-            <li><button><a class="contactButtons" href="https://www.linkedin.com/m/in/fredleethompson" target="_blank">Find me on LinkedIn</a></button></li>
-            <li><button><a class="contactButtons" href="https://github.com/FredLeeThompson" target="_blank">Follow me on Github</a></button></li>
-            <li><button><a class="contactButtons" href="mailto:thompsonfrederick454@gmail.com" target="_blank">Email Me</a></button></li>
+            <li><button type="button" id="linkButton">Find me on LinkedIn</button></li>
+            <li><button type="button" onclick="window.location.href = 'https://www.linkedin.com/in/fredleethompson'">Follow me on Github</button></li>
+            <li><button type="button" onclick="window.location.href = 'mailto:https://www.linkedin.com/in/fredleethompson'">Email Me</button></li>
           </ul>
         </div>
         <br>
