Updated button links. Removed 'index.js'.

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
           <b style="font-size:21px;">Please feel free to contact or follow me below!</b>
           <br>
           <ul>
-            <li><button type="button" id="linkButton">Find me on LinkedIn</button></li>
-            <li><button type="button" onclick="window.location.href = 'https://www.linkedin.com/in/fredleethompson'">Follow me on Github</button></li>
-            <li><button type="button" onclick="window.location.href = 'mailto:https://www.linkedin.com/in/fredleethompson'">Email Me</button></li>
+            <li><button type="button" onclick="window.location.href = 'https://www.linkedin.com/in/fredleethompson'">Find me on LinkedIn</button></li>
+            <li><button type="button" onclick="window.location.href = 'https://github.com/FredLeeThompson'">Follow me on Github</button></li>
+            <li><button type="button" onclick="window.location.href = 'mailto:thompsonfrederick454@gmail.com'">Email Me</button></li>
           </ul>
         </div>
         <br>
