--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="contactMeContent">
           <div class="mapPadd">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d208833.78596597246!2d-90.08676832759262!3d35.130977150833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d57e1eea439745%3A0xd193f315601ab6fe!2sMemphis%2C%20TN!5e0!3m2!1sen!2sus!4v1599272007031!5m2!1sen!2sus"
-            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
         <br>
