--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Thompson Elements - Web App Design Company</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/14231c02e3.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     <link href="reset.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arimo&family=IBM+Plex+Sans&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="CSSGrid">
         <div class="navlogo" id="home">
@@ -50,10 +52,10 @@
 
         <div class="content">
             <div id=headerimagepadd>
-                <img src="FredT.svg"
+                <!-- <img src="FredT.svg"
                 alt="Headshot of Frederick Thompson"
                 style="width:auto;height:500px">
-            </div>
+            </div> -->
         </div>
 
         <div class="aboutmesect" id="abme">
