Update plain text on honme screen

--- a/MOBILEFIRST.html
+++ b/MOBILEFIRST.html
@@ -12,5 +12,5 @@
   </div>
 </header>
 
-<body><h2>This is the body</h2></body>
-<footer><p>Here is the footer<p></footer>
+<body><h2>This is the body.</h2></body>
+<footer><p>Here is the footer.<p></footer>
