Altered svg image.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
         <div class="content">
             <div id=headerimagepadd>
+              <img src="FredT.svg" width="593" alt="Headshot of Frederick Thompson">
+            </div>
                 <!-- <img src="FredT.svg"
                 alt="Headshot of Frederick Thompson"
                 style="width:auto;height:500px">
