Added one extra row befor contact area, after 'casepreviwpic1'.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="animateline"></div>
             </div>
             <div id="aboutmepadd">
-                <p style="text-align:center;line-height:1.4">Hello, I'm Frederick Thompson. For as long as I can remember,  I've been working with computer systems. I experienced early on the impact of having limited access to technology had on not only quality education, but also how crippling it can be for any organization in efforts of producing quality and long-standing results to communities far and wide. With a previous background in computer hardware installation and maintenance, I approach all workforce challenges with diligence and self- discipline with high expectations. My goal is to use the fiscal and financial reach of web applications and development to have an ethical impact in businesses and societies throughout.</p>
+                <p style="text-align:center;line-height:1.4">Hello, I'm Frederick Thompson. For as long as I can remember,  I've been working.k with computer systems. I experienced early on the impact of having limited access to technology had on not only quality education, but also how crippling it can be for any organization in efforts of producing quality and long-standing results to communities far and wide. With a previous background in computer hardware installation and maintenance, I approach all workforce challenges with diligence and self- discipline with high expectations. My goal is to use the fiscal and financial reach of web applications and development to have an ethical impact in businesses and societies throughout.</p>
             </div>
         </div>
 
@@ -101,6 +101,18 @@
             <div id="previewpic1">
                 <img src="casePreview1Pic.png" alt="BuzzBuzz Case Preview Pic">
             </div>
+        </div>
+
+        <div>
+          <p>
+              Too much time on your hands? In need of some random humor
+              or some random knowledge? View my collaboration with
+              <em>BuzzBuzz Inc.</em> and leave with a new name!
+          </p>
+        </div>
+
+        <div>
+          <img src="casePreview1Pic" alt="Case Preview Picture">
         </div>
 
         <div class="aboutmesectbar contactMe">
