added file extention (.png) to 'casepreview1Pic' in order to correct page display.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div>
-          <img src="casePreview1Pic" alt="Case Preview Picture">
+          <img src="casePreview1Pic.png" alt="Case Preview Picture">
         </div>
 
         <div class="aboutmesectbar contactMe">
