Removed 'previewpic1' id from 'casepreview1pic' grid area because it had no css rules.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="casepreview1pic">
-            <div id="previewpic1">
+            <div>
                 <img src="casePreview1Pic.png" alt="BuzzBuzz Case Preview Pic">
             </div>
         </div>
@@ -112,7 +112,7 @@
         </div>
 
         <div>
-          <img src="casePreview1Pic.png" alt="Case Preview Picture">
+          <img height="300px" width="300px" src="casePreview1Pic.png" alt="Case Preview Picture">
         </div>
 
         <div class="aboutmesectbar contactMe">
